Fix bookmarklet bug on Firefox not copying the name

--- a/app/assets/stylesheets/views/tools/bookmarklet.scss
+++ b/app/assets/stylesheets/views/tools/bookmarklet.scss
@@ -49,6 +49,7 @@
         text-align: center;
 
         img{
+          border: 1px dashed #777;
           height: auto;
           max-width: 390px;
           width: 100%;
@@ -66,6 +67,7 @@
       box-shadow: 0 0 5px 1px #777;
       color: white;
       display: none;
+      margin-top: 1rem;
       padding: 1rem;
       text-align: center;
     }
